[firefox] / Fix Courier being unreadable with font smoothing and a different default font configuration in firefox.

--- a/firefox/.mozilla/firefox/q6q6ol1h.default/chrome/userContent.css
+++ b/firefox/.mozilla/firefox/q6q6ol1h.default/chrome/userContent.css
@@ -33,3 +33,8 @@
   src: local('Comic Neue');
 }
 
+@font-face {
+  font-family: 'Courier';
+  src: local('Source Code Pro');
+}
+
